--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <html lang="pt-BR">
-<head><script>
-window.location.replace("https://guia-simples.taxanacional.sa.com/");
-</script>
-
-<!-- Google tag (gtag.js) -->
+<head><!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17432005566"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
